# econcharts

./: .gitignore  CLAUDE.md  GRAMMAR.md  LICENSE  README.md  conftest.py  manual.html  pyproject.toml  pytest.ini
.claude/: settings.json
econcharts/: __init__.py  annotations.py  batch.py  charttypes.py  cli.py  data.py  deck.py  errors.py  marks.py  render.py  spec.py  theme.py  timeaxis.py
examples/: batch.yaml  contribuciones.yaml  contribuciones_marcado.yaml  credito_moneda.yaml  datos.xlsx  exportaciones_importaciones.yaml  formato_lineas.yaml  gallery.yaml  inflacion_densa.yaml  inflacion_marcada.yaml  inflacion_meta.yaml  inflacion_pe.yaml  marco_amplio.yaml  pbi_contribuciones.yaml  pbi_contribuciones_sin_titulo.yaml  pbi_growth.yaml  pbi_growth_anotado.yaml  pbi_growth_marcado.yaml  pbi_growth_span.yaml  reservas.yaml  reservas_marcada.yaml  reservas_tc.yaml  tipo_cambio_diario.yaml  tres_series.yaml
examples/macro/: _make_skeleton.py  macro.xlsx  peru_macro.yaml
mock_ship/: econcharts_mockship.py
ship/: build.py  econcharts.spec  launch.py
tests/: test_batch.py  test_charttypes.py  test_cli.py  test_data.py  test_excel.py  test_gallery.py  test_render.py  test_spec.py  test_theme.py
themes/: bbva.yaml  macro.yaml
